@@ -593,8 +593,6 @@ public class Application extends Restlet {
     @Override
     public synchronized void start() throws Exception {
         if (isStopped()) {
-            super.start();
-
             if (getHelper() != null) {
                 getHelper().start();
             }
@@ -608,6 +606,8 @@ public class Application extends Restlet {
             if (getOutboundRoot() != null) {
                 getOutboundRoot().start();
             }
+
+            super.start();
         }
     }
 
@@ -619,6 +619,9 @@ public class Application extends Restlet {
     @Override
     public synchronized void stop() throws Exception {
         if (isStarted()) {
+            // Must be invoked as a first step
+            super.stop();
+
             if (getOutboundRoot() != null) {
                 getOutboundRoot().stop();
             }
@@ -635,8 +638,6 @@ public class Application extends Restlet {
 
             // Clear the annotations cache
             AnnotationUtils.clearCache();
-
-            super.stop();
         }
     }
 
