@@ -582,22 +582,23 @@ public class Server extends Connector {
     @Override
     public synchronized void start() throws Exception {
         if (isStopped()) {
-            super.start();
-
             if (getHelper() != null) {
                 getHelper().start();
             }
+
+            super.start();
         }
     }
 
     @Override
     public synchronized void stop() throws Exception {
         if (isStarted()) {
+            // Must be invoked as a first step
+            super.stop();
+
             if (getHelper() != null) {
                 getHelper().stop();
             }
-
-            super.stop();
         }
     }
 
